--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "clsx": "^2.1.1",
     "devicon-react": "^1.1.1",
     "framer-motion": "^11.11.17",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
     "react-animated-numbers": "^0.18.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-logo": "^1.0.15",
     "react-tech-icons": "^1.6.2",
