--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "react-type-animation": "^3.2.0",
     "resend": "^4.0.1",
     "tailwind-merge": "^2.5.4"
-  }
+  },
+  
+    "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start"
+    }
+   
+
 }
