--- a/portfolio-dhruv/package.json
+++ b/portfolio-dhruv/package.json
@@ -16,7 +16,20 @@
     "portfolio-dhruv": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "@tabler/icons-react": "^3.22.0",
+    "clsx": "^2.1.1",
+    "devicon-react": "^1.1.1",
+   
+    "react-animated-numbers": "^0.18.0",
+   
+    "react-icons": "^5.3.0",
+    "react-logo": "^1.0.15",
+    "react-tech-icons": "^1.6.2",
+    
+    "resend": "^4.0.1",
+    "tailwind-merge": "^2.5.4"
+    
   },
   "devDependencies": {
     "eslint": "^8",
