--- a/portfolio-dhruv/package.json
+++ b/portfolio-dhruv/package.json
@@ -11,25 +11,22 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
+    "@tabler/icons-react": "^3.22.0",
+    "@vercel/analytics": "^1.4.1",
+    "clsx": "^2.1.1",
+    "devicon-react": "^1.1.1",
     "framer-motion": "^11.11.17",
     "next": "15.0.3",
     "portfolio-dhruv": "file:",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-type-animation": "^3.2.0",
-    "@tabler/icons-react": "^3.22.0",
-    "clsx": "^2.1.1",
-    "devicon-react": "^1.1.1",
-   
     "react-animated-numbers": "^0.18.0",
-   
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-logo": "^1.0.15",
     "react-tech-icons": "^1.6.2",
-    
+    "react-type-animation": "^3.2.0",
     "resend": "^4.0.1",
     "tailwind-merge": "^2.5.4"
-    
   },
   "devDependencies": {
     "eslint": "^8",
